Merged in changed for 1.20.1 port, fixed "item not wanted message", pickup counter interaction only takes one item at a time